Add JVM options for Java 16.